Add recipe details to macaroni-and-cheese.html

--- a/recipes/macaroni-and-cheese.html
+++ b/recipes/macaroni-and-cheese.html
@@ -4,7 +4,42 @@
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
     </head>
-    <body>
+    <body id="header">
         <h1>Macaroni and Cheese</h1>
+        <img src="https://tinyurl.com/3yxpejeh" alt="Macaroni and Cheese">
+        <h2>Quick, easy, and tasty macaroni and cheese dish. Fancy, designer mac and cheese often costs forty or fifty dollars to
+        prepare when you have so many exotic and expensive cheeses, but they aren't always the best tasting. This simple recipe
+        is cheap and tasty.</h2>
+        <h3>Yields: 6 servings      Prep Time: 15 minutes       Cook Time: 15 minutes</h3>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>4 c. dried macaroni</li>
+            <li>1 whole egg</li>
+            <li>1/4 c. salted butter</li>
+            <li>1/4 c. whole milk</li>
+            <li>2 1/2 c. whole milk</li>
+            <li>2 tsp. dry mustard, more if desired</li>
+            <li>1 lb. cheese, grated</li>
+            <li>1/2 tsp. salt, more to taste</li>
+            <li>1/2 tsp. ground black pepper</li>
+        </ul> 
+        <h3>Directions</h3>
+        <ol>
+            <li>Cook the macaroni until very firm. The macaroni should be too firm to eat right out of the pot. Drain.</li>
+            <li>In a small bowl, beat the egg.</li>
+            <li>In a large pot, melt the butter and sprinkle in the flour. Whisk together over medium-low heat. Cook the mixture for
+                5 minutes, whisking constantly. Don’t let it burn. Pour in the milk, add the mustard, and whisk until smooth. Cook
+                for 5 minutes until very thick. Reduce the heat to low.</li>
+            <li>Take 1/4 cup of the sauce and slowly pour it into the beaten egg, whisking constantly to avoid cooking the egg.
+                Whisk together till smooth.</li>
+            <li>Pour the egg mixture into the sauce, whisking constantly. Stir until smooth. Add in the cheese and stir to melt. Add
+                the salt, seasoned salt and pepper. Taste the sauce and add more salt as needed! DO NOT UNDERSALT.
+                Pour in the drained, cooked macaroni and stir to combine. Serve immediately (very creamy) or pour into a buttered
+                baking dish, top with extra cheese, and bake at 350˚ for 20 to 25 minutes, or until bubbly and golden on top.</li>
+        </ol>
+
+        <a href="#header">Top</a>
+         |    
+        <a href="../index.html">Homepage</a>
     </body>
 </html>
