Fix recipes links and .html file extension

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <h1>Odin Recipes</h1>
         <h2>Best Pasta Dishes</h2>
         <ul>
-            <a href="recipes/macaroni-and-cheese.html">Macaroni and Cheese</a>
-            <a href="recipes/pesto-pasta">Pesto Pasta</a>
-            <a href="recipes/ricotta-pasta">Ricotta Pasta</a>
+            <li><a href="recipes/macaroni-and-cheese.html">Macaroni and Cheese</a></li>
+            <li><a href="recipes/pesto-pasta.html">Pesto Pasta</a></li>
+            <li><a href="recipes/ricotta-pasta.html">Ricotta Pasta</a></li>
         </ul>
        
     </body>
