--- a/recipes/macaroni-and-cheese.html
+++ b/recipes/macaroni-and-cheese.html
@@ -10,7 +10,7 @@
         <h2>Quick, easy, and tasty macaroni and cheese dish. Fancy, designer mac and cheese often costs forty or fifty dollars to
         prepare when you have so many exotic and expensive cheeses, but they aren't always the best tasting. This simple recipe
         is cheap and tasty.</h2>
-        <h3>Yields: 6 servings      Prep Time: 15 minutes       Cook Time: 15 minutes</h3>
+        <h3>Yields: 6 servings      Prep Time: 15 minutes       Cook Time: 15 minutes       Total Time: 30 minutes</h3>
         <h3>Ingredients</h3>
         <ul>
             <li>4 c. dried macaroni</li>
