--- a/recipes/macaroni-and-cheese.html
+++ b/recipes/macaroni-and-cheese.html
@@ -6,11 +6,11 @@
     </head>
     <body id="header">
         <h1>Macaroni and Cheese</h1>
-        <img src="https://tinyurl.com/3yxpejeh" alt="Macaroni and Cheese">
+        <img src="https://www.eatright.org/-/media/eatrightimages/food/planningandprep/recipes/healthy-mac--cheese.jpg?h=450&w=600&la=en&hash=A63A53C34742E0F64F733362823D8593B4CC3741" alt="Macaroni and Cheese">
         <h2>Quick, easy, and tasty macaroni and cheese dish. Fancy, designer mac and cheese often costs forty or fifty dollars to
         prepare when you have so many exotic and expensive cheeses, but they aren't always the best tasting. This simple recipe
         is cheap and tasty.</h2>
-        <h3>Yields: 6 servings      Prep Time: 15 minutes       Cook Time: 15 minutes       Total Time: 30 minutes</h3>
+        <h3>Yields: 6 servings | Prep Time: 15 minutes | Cook Time: 15 minutes | Total Time: 30 minutes</h3>
         <h3>Ingredients</h3>
         <ul>
             <li>4 c. dried macaroni</li>
