fix linking error to styles.css

--- a/recipes/macaroni-and-cheese.html
+++ b/recipes/macaroni-and-cheese.html
@@ -2,10 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../styles.css">
         <title>Odin Recipes</title>
     </head>
     <body id="header">
-        <h1>Macaroni and Cheese</h1>
+        <h1 class="main-header">Macaroni and Cheese</h1>
         <img src="https://www.eatright.org/-/media/eatrightimages/food/planningandprep/recipes/healthy-mac--cheese.jpg?h=450&w=600&la=en&hash=A63A53C34742E0F64F733362823D8593B4CC3741" alt="Macaroni and Cheese">
         <h2>Quick, easy, and tasty macaroni and cheese dish. Fancy, designer mac and cheese often costs forty or fifty dollars to
         prepare when you have so many exotic and expensive cheeses, but they aren't always the best tasting. This simple recipe
