--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <link rel="stlyesheet" href="styles.css">
+        <link rel="stylesheet" href="styles.css">
         <title>Odin Recipes</title>    
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 class="main-header">Odin Recipes</h1>
 
         <img src="https://imagesvc.meredithcorp.io/v3/jumpstartpure/image?url=https://cf-images.us-east-1.prod.boltdns.net/v1/static/1033249144001/c120ba43-96f4-46f1-977e-edcdd9310458/5aa19d9e-b6d5-4eb5-9083-aa9e0220e16e/1280x720/match/image.jpg&w=640&h=360&q=90&c=cc" alt="Pastas">
         
