make format prettier

--- a/recipes/macaroni-and-cheese.html
+++ b/recipes/macaroni-and-cheese.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="../styles.css">
-        <title>Odin Recipes</title>
+        <title>Odin Recipes | Mac & Cheese</title>
     </head>
     <body id="header">
         <h1 class="main-header">Macaroni and Cheese</h1>
@@ -12,7 +12,7 @@
         prepare when you have so many exotic and expensive cheeses, but they aren't always the best tasting. This simple recipe
         is cheap and tasty.</h2>
         <h3>Yields: 6 servings | Prep Time: 15 minutes | Cook Time: 15 minutes | Total Time: 30 minutes</h3>
-        <h3>Ingredients</h3>
+        <h3 class="list">Ingredients</h3>
         <ul>
             <li>4 c. dried macaroni</li>
             <li>1 whole egg</li>
@@ -24,7 +24,7 @@
             <li>1/2 tsp. salt, more to taste</li>
             <li>1/2 tsp. ground black pepper</li>
         </ul> 
-        <h3>Directions</h3>
+        <h3 class="list">Directions</h3>
         <ol>
             <li>Cook the macaroni until very firm. The macaroni should be too firm to eat right out of the pot. Drain.</li>
             <li>In a small bowl, beat the egg.</li>
