--- a/recipes/pesto-pasta.html
+++ b/recipes/pesto-pasta.html
@@ -3,17 +3,17 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="../styles.css">
-        <title>Odin Recipes</title>
+        <title>Odin Recipes | Pesto Pasta</title>
     </head>
 
     <body id="header">
-        <h1>Tomato Chicken Pesto Pasta</h1>
+        <h1 class="main-header">Tomato Chicken Pesto Pasta</h1>
         <img src="https://img.taste.com.au/OTrVy5Tr/w643-h428-cfill-q90/taste/2020/02/mar20_tomato-pesto-chicken-pasta-158572-1.jpg" alt="Pesto Pasta">
         <h2>A light and bright pasta bowl with pesto chicken, this Italian-inspired recipe makes a great weeknight meal.</h2>
         
         <h3>Yields: 4 servings | Prep Time: 15 minutes | Cook Time: 15 minutes | Total Time: 30 minutes</h3>
         
-        <h3>Ingredients</h3>
+        <h3 class="list">Ingredients</h3>
         <ul>
             <li>375g fresh fettuccines</li>
             <li>1 tbsp olive oil</li>
@@ -23,6 +23,7 @@
             <li>60g baby spinach</li>
         </ul>
 
+        <h3 class="list">Directions</h3>
         <ol>
             <li>Cook the pasta in a large saucepan of boiling water following packet directions or until al dente. Drain, reserving ½ cup (125ml) of cooking liquid.</li>
             <li>Meanwhile, heat oil in a large, deep non-stick frying pan over medium-high heat. Cook half the chicken , stirring, for 3 mins or until golden brown and cooked through. Transfer to a plate. Cover with foil to keep warm. Repeat with the remaining chicken.</li>
