--- a/recipes/ricotta-pasta.html
+++ b/recipes/ricotta-pasta.html
@@ -3,18 +3,18 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="../styles.css">
-        <title>Odin Recipes</title>
+        <title>Odin Recipes | Ricotta Pasta</title>
     </head>
 
     <body id="header">
-        <h1>Lemon Ricotta Pasta</h1>
+        <h1 class="main-header">Lemon Ricotta Pasta</h1>
         <img src="https://i.pinimg.com/736x/be/1b/f6/be1bf65446a201f4b6432fa1198c15e1.jpg" alt="Ricotta Pasta">
         <h2>Here’s a quickie recipe for those nights when you just need something fast and delicious. This Lemon Ricotta Pasta
             is super fast, light, and fresh, which makes it perfect for an easy weeknight dinner during the summer. The bright
             lemon flavor perfectly compliments the light and creamy ricotta, and the little pops of sweetness from the peas make
             every bite a little more interesting. Simple, fresh, and easy.</h2>
         <h3>Yields: 4 servings | Prep Time: 10 minutes | Cook Time: 20 minutes | Total Time: 30 minutes</h3>
-        <h3>Ingredients</h3>
+        <h3 class="list">Ingredients</h3>
         <ul>
             <li>1 lemon</li>
             <li>8 oz. penne pasta</li>
@@ -27,7 +27,7 @@
             <li>1/4 tsp freshly cracked balck pepper (or to taste)</li>
             <li>1 pinch crushed red pepper</li>
         </ul>
-        <h3>Directions</h3>
+        <h3 class="list">Directions</h3>
         <ol>
             <li>Zest and juice the lemon. You'll need about ½ tsp zest and 1 Tbsp lemon juice.</li>
             <li>Cook the pasta according to the package directions (boil for 7-10 minutes, or until tender). Before draining,
